Working on horses page design

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,7 +21,7 @@
  *= require scheduler.min
  *= require style
  *= require responsive
- *= custom_css
+ *= require custom_css
  */
 
 .rc-time-picker-panel{
