--- a/app/assets/stylesheets/responsive.css
+++ b/app/assets/stylesheets/responsive.css
@@ -8,12 +8,15 @@
 /*Text shadow mixin*/
 /* pages responsive scss */
 @media (max-width: 990px) {
-  .rghtHeadTop, .rghtCalCntnr {
+  .rghtHeadTop,
+  .rghtCalCntnr {
     margin-left: 0;
-    margin-right: 0; }
+    margin-right: 0;
+  }
 
   .leftMenu {
-    left: -250px; }
+    left: -250px;
+  }
 
   .mainMenuIcn {
     right: -64px;
@@ -22,68 +25,91 @@
     -o-transform: rotate(180deg);
     -ms-transform: rotate(180deg);
     -webkit-transform: rotate(180deg);
-    transform: rotate(180deg); }
+    transform: rotate(180deg);
+  }
 
   .closeMenu .leftMenu {
-    left: 0; }
-    .closeMenu .leftMenu .mainMenuIcn {
-      right: -15px;
-      -moz-transform: rotate(0deg);
-      -o-transform: rotate(0deg);
-      -ms-transform: rotate(0deg);
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg); }
+    left: 0;
+  }
+  .closeMenu .leftMenu .mainMenuIcn {
+    right: -15px;
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
 
   .rightMain {
     margin-left: 0;
-    padding-bottom: 0; }
+    padding-bottom: 0;
+  }
 
   .rmInr {
-    padding: 0 15px; }
+    padding: 0 15px;
+  }
 
-  body, html, .mainView, .rightMain, .rmInr {
-    height: auto; }
+  body,
+  html,
+  .mainView,
+  .rightMain,
+  .rmInr {
+    height: auto;
+  }
 
   .rightMain footer {
     position: static;
-    margin-top: 30px; }
+    margin-top: 30px;
+  }
 
   .rghtHeadTop {
-    padding: 15px 0 13px; }
-    .rghtHeadTop h1 {
-      font-size: 30px;
-      float: none;
-      width: auto;
-      text-align: center;
-      padding: 0 50px; }
-    .rghtHeadTop .rhtSrch {
-      float: none;
-      width: auto;
-      position: absolute;
-      top: 18px;
-      right: 0; }
+    padding: 15px 0 13px;
+  }
+  .rghtHeadTop h1 {
+    font-size: 30px;
+    float: none;
+    width: auto;
+    text-align: center;
+    padding: 0 50px;
+  }
+  .rghtHeadTop .rhtSrch {
+    float: none;
+    width: auto;
+    position: absolute;
+    top: 18px;
+    right: 0;
+  }
 
-  .rhtSrch > form input[type="text"] {
-    display: none; }
+  .rhtSrch > form input[type='text'] {
+    display: none;
+  }
 
   .rhtSrch > form button {
-    position: static; }
+    position: static;
+  }
 
-  .mCustomScrollbar, .mCustomScrollbar.mCS_no_scrollbar, .mCustomScrollbar.mCS_touch_action {
+  .mCustomScrollbar,
+  .mCustomScrollbar.mCS_no_scrollbar,
+  .mCustomScrollbar.mCS_touch_action {
     -ms-touch-action: inherit;
-    touch-action: inherit; }
+    touch-action: inherit;
+  }
 
   .mCSB_inside > .mCSB_container {
-    margin-right: 0; }
+    margin-right: 0;
+  }
 
   .mCSB_scrollTools .mCSB_draggerContainer {
-    display: none; }
+    display: none;
+  }
 
   .fc-agendaDay-view th.fc-day-header span {
-    margin-left: -60px; }
+    margin-left: -60px;
+  }
 
   .fc-scroller {
-    height: auto !important; }
+    height: auto !important;
+  }
 
   .lrCntnr {
     position: fixed;
@@ -91,83 +117,103 @@
     left: 0;
     bottom: 0;
     right: 0;
-    display: block; }
-    .lrCntnr .lrcInr {
-      display: block;
-      vertical-align: middle;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      -moz-transform: translate(-50%, -50%);
-      -o-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-      -webkit-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%); } }
+    display: block;
+  }
+  .lrCntnr .lrcInr {
+    display: block;
+    vertical-align: middle;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -moz-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+}
 @media (max-width: 767px) {
-  .fc .fc-axis, .fc th {
-    padding: 5px; }
+  .fc .fc-axis,
+  .fc th {
+    padding: 5px;
+  }
 
   th.fc-day-header.fc-widget-header {
-    font-weight: 600; }
+    font-weight: 600;
+  }
 
   .leftMenu .lmInr {
     max-height: 100%;
-    overflow: auto; }
-    .leftMenu .lmInr .leftuserTop, .leftMenu .lmInr .lmFoot {
-      position: static; }
-    .leftMenu .lmInr .leftMainMenu {
-      padding: 10px 0 30px; }
+    overflow: auto;
+  }
+  .leftMenu .lmInr .leftuserTop,
+  .leftMenu .lmInr .lmFoot {
+    position: static;
+  }
+  .leftMenu .lmInr .leftMainMenu {
+    padding: 10px 0 30px;
+  }
 
   .addLsn {
     position: static;
     width: 100%;
     max-width: inherit;
-    margin: 0 0 20px; }
-    .addLsn a {
-      -webkit-border-radius: 0;
-      -moz-border-radius: 0;
-      -ms-border-radius: 0;
-      border-radius: 0;
-      -webkit-box-shadow: none;
-      -moz-box-shadow: none;
-      -ms-box-shadow: none;
-      box-shadow: none; }
+    margin: 0 0 20px;
+  }
+  .addLsn a {
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -ms-border-radius: 0;
+    border-radius: 0;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    -ms-box-shadow: none;
+    box-shadow: none;
+  }
 
   .rmInr {
-    padding: 0; }
+    padding: 0;
+  }
 
   .rghtHeadTop {
     margin-bottom: 0;
-    border: 0; }
+    border: 0;
+  }
 
   .fc-toolbar .fc-left {
     max-width: inherit;
-    margin: 0 10px; }
+    margin: 0 10px;
+  }
 
   .rghtHeadTop .rhtSrch {
-    right: 10px; }
+    right: 10px;
+  }
 
   .fc-toolbar .fc-right {
     float: none;
-    margin: 0 15px; }
+    margin: 0 15px;
+  }
 
   .fc-row .fc-content-skeleton td > span,
   .fc-row .fc-helper-skeleton td > span {
-    font-size: 17px; }
+    font-size: 17px;
+  }
 
   .fc-ltr .fc-axis {
     background-color: #f2f2f2;
-    font-weight: 600; }
+    font-weight: 600;
+  }
 
   .fc-unthemed td.fc-today > span.fc-day-number {
     background: transparent;
     width: auto;
     height: auto;
     color: #222;
-    position: relative; }
+    position: relative;
+  }
 
   .fc-unthemed td.fc-today > span.fc-day-number:after {
-    content: "";
+    content: '';
     display: block;
     width: 12px;
     height: 12px;
@@ -179,17 +225,22 @@
     -webkit-border-radius: 100%;
     -moz-border-radius: 100%;
     -ms-border-radius: 100%;
-    border-radius: 100%; }
+    border-radius: 100%;
+  }
 
   .fc-row .fc-content-skeleton td > span,
   .fc-row .fc-helper-skeleton td > span {
     width: auto;
-    height: auto; } }
+    height: auto;
+  }
+}
 @media (max-width: 680px) {
   .fc-toolbar .fc-center {
-    padding: 13px; }
-    .fc-toolbar .fc-center h2 {
-      font-size: 20px; }
+    padding: 13px;
+  }
+  .fc-toolbar .fc-center h2 {
+    font-size: 20px;
+  }
 
   .lrCntnr .lrcInr {
     top: 15px;
@@ -200,47 +251,64 @@
     -o-transform: translate(0);
     -ms-transform: translate(0);
     -webkit-transform: translate(0);
-    transform: translate(0); }
-    .lrCntnr .lrcInr .lrBtns {
-      display: table;
-      height: 100%;
-      width: 100%;
-      padding: 0; }
-      .lrCntnr .lrcInr .lrBtns .lrBtnsInr {
-        display: table-cell;
-        vertical-align: middle;
-        padding: 150px 25px 25px; }
+    transform: translate(0);
+  }
+  .lrCntnr .lrcInr .lrBtns {
+    display: table;
+    height: 100%;
+    width: 100%;
+    padding: 0;
+  }
+  .lrCntnr .lrcInr .lrBtns .lrBtnsInr {
+    display: table-cell;
+    vertical-align: middle;
+    padding: 150px 25px 25px;
+  }
 
   .lrCntnr .lrcInr .loginCnt {
-    height: 100%; }
+    height: 100%;
+  }
 
   .lrCntnr {
-    padding: 10px; }
-    .lrCntnr .lrcInr .loginCnt {
-      padding: 15px; }
-      .lrCntnr .lrcInr .loginCnt .lrDbl {
-        margin: 20px 0; }
-      .lrCntnr .lrcInr .loginCnt .lgBtn {
-        margin: 20px 0 0; } }
+    padding: 10px;
+  }
+  .lrCntnr .lrcInr .loginCnt {
+    padding: 15px;
+  }
+  .lrCntnr .lrcInr .loginCnt .lrDbl {
+    margin: 20px 0;
+  }
+  .lrCntnr .lrcInr .loginCnt .lgBtn {
+    margin: 20px 0 0;
+  }
+}
 @media screen and (max-width: 740px) and (max-height: 610px) {
   .loRegBody {
-    overflow: visible; }
+    overflow: visible;
+  }
 
   .lrCntnr .lrcInr .loginCnt {
-    min-height: 315px; }
+    min-height: 315px;
+  }
 
   .regWrp {
     position: static;
     height: auto;
-    min-height: 100vh; }
-    .regWrp .lrcInr {
-      position: static;
-      height: auto; }
-      .regWrp .lrcInr .loginCnt {
-        padding: 15px; }
-        .regWrp .lrcInr .loginCnt .lrDbl {
-          margin: 20px 0; }
-        .regWrp .lrcInr .loginCnt .lgBtn {
-          margin: 20px 0 0; } }
+    min-height: 100vh;
+  }
+  .regWrp .lrcInr {
+    position: static;
+    height: auto;
+  }
+  .regWrp .lrcInr .loginCnt {
+    padding: 15px;
+  }
+  .regWrp .lrcInr .loginCnt .lrDbl {
+    margin: 20px 0;
+  }
+  .regWrp .lrcInr .loginCnt .lgBtn {
+    margin: 20px 0 0;
+  }
+}
 
 /*# sourceMappingURL=responsive.css.map */
