--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,8 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <title>Equine Office</title>
     <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', :'data-turbolinks-track'=> 'reload' %>
+    <%= javascript_include_tag 'application', :'data-turbolinks-track' => 'reload' %>  
   </head>
   <body class="loRegBody">
       
@@ -38,4 +38,8 @@
       <!-- </div> -->
       <%= javascript_pack_tag 'webpack-bundle' %>
   </body>
+  <script type="text/javascript">
+  
+  
+ 	</script>
 </html>
