--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1602,4 +1602,182 @@ body .react-datepicker-popper {
   .addLsnPop .snglBlck .popBody .slct_cnt {
     margin: 0; }
 
+/*** Customizing Style for Client Page ***/
+.rghtHeadMid {
+    border-bottom: 2px solid #e6e6e6;
+}
+.rghtHeadMid h3 {
+    font-size: 18px;
+    float: left;
+    width: 70%;
+}
+.addLsn.rtClient {
+    position: inherit;
+    width: 100%;
+    margin: -10px 0px 10px;
+}
+.rghtContent {
+    margin: 0 3%;
+    padding: 20px;
+    border: 2px solid rgb(204, 204, 204);
+    border-radius: 3px; -webkit-border-radius: 3px; -moz-border-radius: 3px;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2); -webkit-box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2); -moz-box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
+    background-color: rgb(242, 242, 242);
+    margin-bottom: 15px;
+}
+.rghtContent div {
+    text-align: center;
+}
+.rghtContent .clientName {
+    font-size: 24px;
+    padding: 50px 0px;
+    text-align: left;
+}
+.rghtContent .clientName .custom_caret {
+    background: #0099bb url(downtArw.png) center center no-repeat;
+    border-radius: 2px; -webkit-border-radius: 2px; -moz-border-radius: 2px; -ms-border-radius: 2px;
+    margin-left: 10px;
+}
+.rghtContent .clientName .custom_caret .caret {
+    margin-left: 15px;
+    border-top: 0;
+}
+.rghtContent .clientOptions {
+    padding: 20px 10px;
+}
+.rghtContent .clientOption {
+    background-color: #ffffff;
+    padding-left: 0px;
+    margin-right: 20px;
+    float: right;
+}
+.rghtContent .clientOption .optionHeader {
+    text-align: left;
+    margin-bottom: 15px;
+    margin-top: -2px;
+}
+.rghtContent .clientOption .optionHeader span {
+    background-color: rgb(204, 204, 204);
+    padding: 3px 10px;
+    font-size: 12px;
+    font-weight: bold;
+}
+.rghtContent .clientOption .optionContent {
+    margin-bottom: 15px;
+}
+.rghtContent .clientOption .optionContent .first {
+    font-weight: bold;
+    font-size: 16px;
+}
+.rghtContent .clientOption .optionContent .second {
+    font-size: 14px;
+}
+.rghtContent .rghtContentSection {
+  margin-bottom: 25px;
+}
+.rghtContent .rghtContentSection .btmBtns .bbsnglBtn button {
+  font-size: 18px;
+  font-weight: 600;
+}
+.rghtContent .rghtContentSection .sectionHeader {
+    background-color: rgb(230, 230, 230);
+    text-align: left;
+    padding: 15px;
+    font-weight: bold;
+}
+.rghtContent .rghtContentSection .sectionHeader h3 {
+    display: inline-block;
+}
+.rghtContent .rghtContentSection .sectionHeader .bbsnglBtn {
+    float: right;
+    margin: -5px 5px;
+}
+.rghtContent .rghtContentSection .sectionHeader .bbsnglBtn button {
+    font-size: 14px;
+    padding: 5px 10px;
+}
+.rghtContent .rghtContentSection .sectionContent {
+    padding: 15px;
+    background-color: #ffffff;
+}
+.rghtContent .rghtContentSection .sectionContent p {
+    text-align: left;
+    margin-bottom: 0px;
+}
+.rghtContent .rghtContentSection .sectionContent table th {
+    text-align: center;
+    font-weight: 600;
+    font-size: 14px;
+}
+.rghtContent .rghtContentSection .sectionContent table td {
+    font-size: 14px;
+}
+.rghtContent .rghtContentSection .sectionContent table td div.clientIcn {
+  margin-right: 0px;
+}
+.rghtContent .rghtContentSection .sectionContent table td span.first {
+    font-weight: 600;
+    font-size: 14px;
+    color: #4d4d4d;
+}
+.rghtContent .rghtContentSection .sectionContent table td span.checkMark {
+  color: rgb(0, 153, 188);
+  font-weight: bold;
+}
+.rghtContent .rghtContentSection .sectionContent h1 {
+  text-align: left;
+  font-size: 20px;
+  font-weight: 600;
+}
+.rghtContent .rghtContentSection .sectionContent .contentTitle {
+    text-align: left;
+    font-size: 15px;
+    font-weight: 600;
+    padding-top: 15px;
+}
+.rghtContent .rghtContentSection .sectionContent .contentItems {
+
+}
+.rghtContent .rghtContentSection .sectionContent .contentItems .contentItem {
+    border: 1px solid rgb(204,204,204);
+    padding: 15px 20px;
+    text-align: left;
+    background-color: rgb(242,242,242);
+    border-radius: 3px; -webkit-border-radius: 3px; -moz-border-radius: 3px;
+    margin-top: 5px;
+}
+.rghtContent .rghtContentSection .sectionContent .contentItems .contentItem a {
+    text-decoration: none;
+    font-weight: bold;
+    color: #4d4d4d;
+    font-size: 16px;
+}
+.rghtContent .rghtContentSection div.clientIcn {
+    background-color: rgb(140, 221, 156);
+    border: 1px solid rgb(0, 154, 129);
+    border-radius: 50%; -webkit-border-radius:50%; -moz-border-radius:50%;
+    width: 28px;
+    display: inline-block;
+    margin-right: 10px;
+    float: left;
+    margin-top: -2px;
+}
+.rghtContent .rghtContentSection img.clientIcn {
+    margin-top: 4px;
+    margin-left: 3px;
+}
+.rghtContent .rghtContentSection div.staffIcn {
+    background-color: rgb(242, 188, 185);
+    border: 1px solid rgb(223, 88, 79);
+}
+.rghtContent .rghtContentSection img.staffIcn {
+    margin-left: 0px;
+}
+.rghtContent .rghtContentSection div.hrseIcn {
+  background-color: rgb(140, 221, 156);
+  border: 1px solid rgb(0, 154, 129);
+}
+.rghtContent .rghtContentSection img.hrseIcn {
+    margin-left: 0px;
+}
 /*# sourceMappingURL=style.css.map */
