--- a/app/assets/stylesheets/custom_css.css
+++ b/app/assets/stylesheets/custom_css.css
@@ -76,8 +76,8 @@
   margin-right: 0;
 }
 .filterBoxWrap .filterBox .titleBar {
-  font-size: 12px;
-  font-weight: 800;
+  font-size: 11px;
+  font-weight: 600;
   background-color: #ddd;
   padding: 5px 5px;
 }
@@ -170,6 +170,46 @@
 .noHorseImg {
   height: 25px;
   width: 30px;
+}
+
+.donutchart-track {
+  fill: transparent;
+  stroke: #dae2e5;
+  stroke-width: 26;
+}
+.donutchart-indicator {
+  fill: transparent;
+  stroke: #aac24b;
+  stroke-width: 26;
+  stroke-dasharray: 0 10000;
+  transition: stroke-dasharray 0.3s ease;
+}
+
+.donutchart {
+  margin: 0 auto;
+  border-radius: 50%;
+  display: block;
+}
+.canvasHorse {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 50px;
+  width: 50px;
+}
+
+.donutchart-text {
+  font-family: 'Roboto';
+  fill: #607580;
+}
+.donutchart-text-val {
+  font-size: 42px;
+}
+.donutchart-text-percent {
+  font-size: 20px;
+}
+.donutchart-text-label {
+  font-size: 9px;
 }
 
 /*********************/
